# doyouknowb0xxy

./: CMakeLists.txt  README.md  README_new.md
.github/: pull_request_template.md
docs/: MAPPING.md  MODES.md  NOTES.md  PROGRAMMING.md  README_old.md
include/dac_algorithms/: ultimate_F1.hpp  ultimate_macro_F1.hpp  wired_fight_pad_pro_default.hpp  xbox_360.hpp
src/: main.cpp
src/dac_algorithms/: ultimate_F1.cpp  ultimate_macro_F1.cpp  wired_fight_pad_pro_default.cpp  xbox_360.cpp
